--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,5 +1,5 @@
 erick_workout:
     resource: "@ErickWorkoutBundle/Controller/"
     type:     annotation
-    prefix:   /
+    prefix:   /bundle1
 
